<resources>
    <string name="app_name">H.O.R.S.E.</string>
    <string name="join_game_lobby">Join Game Lobby</string>
    <string name="display_name">Display Name</string>
    <string name="server_address">Server Address: 0.0.0.0</string>
    <string name="title_activity_lobby_screen">Lobby</string>
    <string name="Connecting">Connecting...</string>
    <string name="ok">OK</string>
    <string name="instruction_set">
       "\tH.O.R.S.E. is an unique game in and of it's own."
        "It is based off the childhood basketball game H.O.R.S.E."
        "However you will not be playing basketball here… or maybe you will"
        "In this version of the childhood classic you and hopefully some 'friends'"
        "will be engaging in a series of mini-games, and the VIP will be the one to "
        "set the standard, and the players afterwards are to do as well as the player them,"
        "if the players succeeds in beating the previous player, the previous player gains a letter,"
        "if the player fails then they receive a letter instead, and if they tie then nothing happens."
        "A host of mini-games will be available to play from the game server you chose, the smart device"
        "in your hand shall be your tool to win. The game may ask of you to do weird and crazy things with "
        "your device, just play along and have fun. The last player who has yet to spell H.O.R.S.E. wins."
    </string>
    <string name="lobby">Lobby</string>
    <string name="vip">VIP</string>
    <string name="up_next">Up Next</string>
    <string name="my_device">My Device</string>
    <string name="startGame">Start Game</string>
    <string name="title_activity_select_agame_screen">Select A Game</string>
    <string name="cmp_details">"Color Me Pretty"</string>
    <string name="title_activity_color_me_pretty">ColorMePretty</string>
    <string name="loading">Loading...</string>
    <string name="cmp_title">Color Me Pretty</string>
    <string name="ready">Ready</string>
    <string name="title_activity_send_log">SendLog</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="do_you_wish_to_send_the_log_file">Do you wish to send the log file?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_for_player_to_pick_a_game">Waiting for player to pick a game.</string>
    <string name="select_a_game">Select a game.</string>
</resources>
