<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.horse.screens.LobbyScreenActivity"
    android:background="@color/FunkyTeal"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:id="@+id/connecting_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/FunkyYellow"
            android:text="@string/Connecting"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="60px"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="@color/FunkyRed"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/lobby_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/instructionSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_set"/>
            <Button
                android:id="@+id/readInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ok"/>
            <ListView
                android:id="@+id/players_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"></ListView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
