<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="1">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/FunkyYellow"
            android:numStars="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/vip"
            android:textColor="@color/FunkyYellow"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/FunkyRed"
            android:numStars="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/my_device"
            android:textColor="@color/FunkyRed"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/FunkyGreen"
            android:numStars="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/up_next"
            android:textColor="@color/FunkyGreen"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>