<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.horse.screens.SelectAGameScreenActivity"
    android:background="@color/FunkyDarkBlue"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/waitingForPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25dp"
                    android:text="@string/waiting_for_player_to_pick_a_game"/>
                <ProgressBar
                    android:id="@+id/waitingForPlayerProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/selectAGameViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/selectAGameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_a_game"
                    android:textSize="25dp"/>
                <ListView
                    android:id="@+id/gameListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="30dp"
                    android:text="@string/loading"/>
                <ProgressBar
                    android:id="@+id/loadingProgressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
